syntax = "proto3";

import "google/api/annotations.proto"; 
//import "google/api/timestamp.proto";

package pb;

message Character {
  int64 id = 1;
  int64 accountid = 2;
  string name = 3;
  string lastname = 4;
  string title = 5;
  string suffix = 6;
  int64 zoneid = 7;
  int64 zoneinstance = 8;
  int64 y = 9;
  int64 x = 10;
  int64 z = 11;
  int64 heading = 12;
  int64 gender = 13;
  int64 race = 14;
  int64 class = 15;
  int64 level = 16;
  int64 deity = 17;
  int64 birthday = 18;
  int64 lastlogin = 19;
  int64 timeplayed = 20;
  int64 level2 = 21;
  int64 anon = 22;
  int64 gm = 23;
  int64 face = 24;
  int64 haircolor = 25;
  int64 hairstyle = 26;
  int64 beard = 27;
  int64 beardcolor = 28;
  int64 eyecolor1 = 29;
  int64 eyecolor2 = 30;
  int64 drakkinheritage = 31;
  int64 drakkintattoo = 32;
  int64 drakkindetails = 33;
  int64 abilitytimeseconds = 34;
  int64 abilitynumber = 35;
  int64 abilitytimeminutes = 36;
  int64 abilitytimehours = 37;
  int64 exp = 38;
  int64 aapointsspent = 39;
  int64 aaexp = 40;
  int64 aapoints = 41;
  int64 groupleadershipexp = 42;
  int64 raidleadershipexp = 43;
  int64 groupleadershippoints = 44;
  int64 raidleadershippoints = 45;
  int64 points = 46;
  int64 curhp = 47;
  int64 mana = 48;
  int64 endurance = 49;
  int64 intoxication = 50;
  int64 str = 51;
  int64 sta = 52;
  int64 cha = 53;
  int64 dex = 54;
  int64 int = 55;
  int64 agi = 56;
  int64 wis = 57;
  int64 zonechangecount = 58;
  int64 toxicity = 59;
  int64 hungerlevel = 60;
  int64 thirstlevel = 61;
  int64 abilityup = 62;
  int64 ldonpointsguk = 63;
  int64 ldonpointsmir = 64;
  int64 ldonpointsmmc = 65;
  int64 ldonpointsruj = 66;
  int64 ldonpointstak = 67;
  int64 ldonpointsavailable = 68;
  int64 tributetimeremaining = 69;
  int64 careertributepoints = 70;
  int64 tributepoints = 71;
  int64 tributeactive = 72;
  int64 pvpstatus = 73;
  int64 pvpkills = 74;
  int64 pvpdeaths = 75;
  int64 pvpcurrentpoints = 76;
  int64 pvpcareerpoints = 77;
  int64 pvpbestkillstreak = 78;
  int64 pvpworstdeathstreak = 79;
  int64 pvpcurrentkillstreak = 80;
  int64 pvp2 = 81;
  int64 pvptype = 82;
  int64 showhelm = 83;
  int64 groupautoconsent = 84;
  int64 raidautoconsent = 85;
  int64 guildautoconsent = 86;
  int64 leadershipexpon = 87;
  int64 RestTimer = 88;
  int64 airremaining = 89;
  int64 autosplitenabled = 90;
  int64 lfp = 91;
  int64 lfg = 92;
  string mailkey = 93;
  int64 xtargets = 94;
  int64 firstlogon = 95;
  int64 eaaeffects = 96;
  int64 epercenttoaa = 97;
  int64 eexpendedaaspent = 98;
  int64 aapointsspentold = 99;
  int64 aapointsold = 100;
  int64 elastinvsnapshot = 101;
}
